@@ -2,15 +2,12 @@ package com.example.application.resources;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
-import javax.validation.ConstraintViolation;
 import javax.validation.Valid;
-import javax.validation.Validator;
-import javax.websocket.server.PathParam;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -23,13 +20,9 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import com.example.application.dtos.ActorDTO;
 import com.example.application.dtos.CiudadShortDTO;
 import com.example.application.dtos.PaisDTO;
-import com.example.domains.contracts.services.ActorService;
 import com.example.domains.contracts.services.PaisesService;
-import com.example.domains.entities.Actor;
-import com.example.domains.entities.Country;
 import com.example.exceptions.DuplicateKeyException;
 import com.example.exceptions.InvalidDataException;
 import com.example.exceptions.NotFoundException;
@@ -55,7 +48,7 @@ public class PaisResource {
 	@GetMapping(path = "/{id}/ciudades")
 	@Transactional
 	public List<CiudadShortDTO> getCiudades(@PathVariable int id) throws NotFoundException {
-		return srv.getOne(id).getCities().stream().map(item -> CiudadShortDTO.from(item)).toList();
+		return srv.getOne(id).getCities().stream().map(item -> CiudadShortDTO.from(item)).collect(Collectors.toList());
 	}
 	
 	@PostMapping
